# file-organizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  file_organizer.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v0.1.0.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
tests/: __init__.py  test_file_organizer.py
